mikec/tests/PASS/control/for/2.mc
int main()
{
    int i;
    int j = 10;

    for( i = 0; i <= j; i = i + 1 )
    {
       printf("Hello %d\n", i );
    }

  return 0;
}
