mikec/tests/FAIL/semantic/test-scope-for5.mc
void main(){
	char i = '0';
	char n = '1';
	int j = 0;
	for (i = '0'; i < n; i = i + n) j = j - 1;
	return;
}